[gd_scene load_steps=26 format=3 uid="uid://b73vhdv5ckg16"]

[ext_resource type="Texture2D" uid="uid://bjhuc6qih6g2i" path="res://Enemies/Bat.png" id="1_3wwr2"]
[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_ulkp1"]
[ext_resource type="Texture2D" uid="uid://ci1qps20ychkf" path="res://Shadows/SmallShadow.png" id="2_m5wm6"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="2_s2yk4"]
[ext_resource type="PackedScene" uid="uid://c6m1gdj1aivdc" path="res://Overlap/hurtbox.tscn" id="3_cn1sm"]
[ext_resource type="PackedScene" uid="uid://yy0fjmktlb7d" path="res://stats.tscn" id="5_ot146"]
[ext_resource type="PackedScene" uid="uid://d3yidyvmjma8u" path="res://Enemies/player_detection_zone.tscn" id="6_ddkch"]
[ext_resource type="PackedScene" uid="uid://bd3u0ms4nmi41" path="res://Overlap/hitbox.tscn" id="7_iyfh8"]
[ext_resource type="PackedScene" uid="uid://cfbw84duecowc" path="res://Overlap/soft_collision.tscn" id="8_q8pp5"]
[ext_resource type="PackedScene" uid="uid://b4gdqroa2jedu" path="res://Enemies/wander_controller.tscn" id="9_7orlo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4cf3a"]
resource_local_to_scene = true
shader = ExtResource("2_s2yk4")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_wy7ys"]
atlas = ExtResource("1_3wwr2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8s0y"]
atlas = ExtResource("1_3wwr2")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvej"]
atlas = ExtResource("1_3wwr2")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4do8"]
atlas = ExtResource("1_3wwr2")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj3n5"]
atlas = ExtResource("1_3wwr2")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1dxt8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy7ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8s0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdvej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4do8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj3n5")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nihgf"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yv8as"]
radius = 7.58593
height = 19.592

[sub_resource type="CircleShape2D" id="CircleShape2D_j47pn"]
radius = 81.77

[sub_resource type="CircleShape2D" id="CircleShape2D_imm5i"]
radius = 3.82069

[sub_resource type="CircleShape2D" id="CircleShape2D_ih7dm"]
radius = 5.02899

[sub_resource type="Animation" id="Animation_fxpuf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2j6ir"]
resource_name = "blink"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvlw0"]
_data = {
"RESET": SubResource("Animation_fxpuf"),
"blink": SubResource("Animation_2j6ir")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ulkp1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4cf3a")
sprite_frames = SubResource("SpriteFrames_1dxt8")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.693726
offset = Vector2(0, -12)

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_m5wm6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nihgf")

[node name="Hurtbox" parent="." instance=ExtResource("3_cn1sm")]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-0.0441971, -12.8622)
shape = SubResource("CapsuleShape2D_yv8as")

[node name="Stats" parent="." instance=ExtResource("5_ot146")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_ddkch")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.305882)
shape = SubResource("CircleShape2D_j47pn")

[node name="Hitbox" parent="." instance=ExtResource("7_iyfh8")]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1.0625, -16)
shape = SubResource("CircleShape2D_imm5i")

[node name="SoftCollision" parent="." instance=ExtResource("8_q8pp5")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_ih7dm")

[node name="WanderController" parent="." instance=ExtResource("9_7orlo")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvlw0")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
